# TrackAI

./: .gitignore  CLAUDE.md  README.md  dev.sh  start.sh
.claude/skills/uv-skill/: SKILL.md
.claude/skills/uv-skill/guides/: config.md  dependencies.md  docker.md  package.md  project_structure.md  resolution.md  run.md  sync.md  tools.md
backend/: README.md  import_log.txt  pyproject.toml
backend/examples/: README.md  context_manager.py  resume_run.py  simple_experiment.py
backend/scripts/: import_exports.py
backend/src/trackai/: __init__.py  config.py  run.py
backend/src/trackai/api/: main.py  models.py
backend/src/trackai/api/routes/: mcp.py  metrics.py  projects.py  runs.py  views.py
backend/src/trackai/cli/: __init__.py  config.py  database.py  init.py  main.py  server.py  utils.py
backend/src/trackai/db/: connection.py  schema.py
backend/src/trackai/migration/: sqlite_to_duckdb.py
backend/src/trackai/s3/: __init__.py  sync.py
backend/src/trackai/services/: logger.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/Charts/: MetricBrowser.tsx  MetricChart.tsx  MetricViewer.tsx  MultiMetricChart.tsx  index.ts
frontend/src/components/Dashboard/: ChartWidget.tsx  MetricCardWidget.tsx  RecentRunsWidget.tsx  index.ts
frontend/src/components/RunsTable/: VirtualRunsTable.tsx  (+1 more)
frontend/src/pages/: CompareRunsPage.tsx  DashboardPage.tsx  ProjectsPage.tsx  RunDetailPage.tsx  RunsPage.tsx
